syntax = "proto3";

package auth;

option go_package = "github.com/tinyci/ci-agents/ci-gen/grpc/services/auth";

service Auth {
  rpc OAuthChallenge(OAuthChallengeRequest) returns (OAuthInfo)  {};
  rpc GetOAuthURL(Scopes)                   returns (String)      {};
}

message String {
  string str = 1;
}

message Scopes {
  repeated string list = 1;
}

message OAuthChallengeRequest {
  string code  = 1;
  string state = 2;
}

message OAuthInfo {
  string username = 1;
  string url      = 2;
  bool   redirect = 3;
}
